<resources>
    <string name="app_name">Trainers Stocks</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_farmerregistration">Farmer Registration</string>
    <string name="menu_notification">Notification</string>
    <string name="districtdata">Districtdata</string>
    <string name="logout">Logout</string>
    <string name="menu_updatestockdistributor">Update Stock Distributor</string>
    <string name="menu_updatestockretailer">Update Stock Retailer</string>
    <string name="menu_stockhistory">Stock History</string>
    <string name="menu_cropdevelopment">Crop Development</string>
    <string name="fullname">Full Name</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="registration">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dealername">Dealer Name</string>
    <string name="current_stock">Current Stock</string>
    <string name="cropownername">Crop Owner Name</string>
    <string name="cropname">Crop Name</string>
    <string name="cropage">Crop Age</string>
    <string name="croplocation">Crop Address</string>
    <string name="pleaseenteryourmail">"Please enter your registered email and subit to  get code to reset  your password "</string>
    <string name="title_activity_stock_datanew">StockDatanewActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="retailers">Retailers</string>
    <string name="wholeseller">Whole Seller</string>
    <string name="topdealers">"Top Dealer's Sale "</string>
    <string name="menu_category">All Category</string>
    <string name="menu_store">All Store</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_referandearn">Refer and Earn</string>
    <string name="menu_rateus">Rate us</string>
    <string name="menu_faq">FAQ\'s</string>
    <string name="menu_privacypolicy">Privacy Policy</string>
    <string name="menu_termsandconditions">Terms and Conditions</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="submit">Submit</string>
    <string name="writeyourissuehere">Write your issue here.</string>
    <string name="selectyourissue">Select Category</string>
    <string name="writeyourfeedbackhere">Write your feedback here.</string>
    <string name="refer_earn">Earn unlimited cashbak with your friends</string>
    <string name="slogen">Slogen here</string>
    <string name="learnmore">"  Learn More"</string>
    <string-array name="contactuscategory">
        <item>B.Pharm</item>
        <item>B.Pharm</item>
        <item>M.Pharm</item>
        <item>PharmD</item>
    </string-array>
    <string name="title_activity_offer_details">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="facebook_app_id" translatable="false">1133583167020907</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1133583167020907</string>
    <string name="newhere">Create an account</string>
    <string name="singup">Sign up</string>
    <string name="signinwithgoogle">Sign in with google</string>
    <string name="loginwithfacebook">Sign in with facbook</string>
    <string name="or">-OR-</string>
    <string name="login">Log in</string>
    <string name="proceed_to_add">Proceed to add</string>
    <string name="bankdetails">"  Bank Details"</string>
    <string name="paytmdetails">"  Paytm Details"</string>
    <string name="upidetails">"  UPI Details"</string>
    <string name="password">Password</string>
    <string name="menu_service">Service</string>
    <string name="menu_account">Account</string>
    <string name="menu_pricing">Pricing</string>
    <string name="menu_livemarket">Live Market</string>
    <string name="menu_trade">Trade</string>
    <string name="menu_aboutcompany">About Company</string>
    <string name="portfolio">Portfolio</string>
    <string name="text_2"><![CDATA[We also provide weekly & daily newsletters for preparing you for trading; we have other services like FOREX Calls & Commodity Calls for Commodity Comdex International Exchange.]]></string>
    <string name="text_3">We provide recommendations Live through SMS. We know how is it important to be instant of time in this business so we have the best instant SMS facility or tally calls (if recommend) with a very efficient system ensuring the instant delivery of Message without any loss of time. So, the clients get adequate time to enter into the trade and fetch the profit.</string>
    <string name="text_4">"Possible any problem with mobile network, Technical fault or maintenance messaging will be stop temporarily.  "</string>
    <string name="text_5">"We offer diversified range of services as per the investments of an investor, trader or a broker. We assure more than 90% accuracy in our recommendations and provide a second to none customer support. We believe in giving each and every member a special treatment by providing online and telephonic assistance round the clock for 12 hours in a day.  "</string>
    <string name="text_1"><![CDATA[Trainers Stocks is an Investment Advisory Company basically providing recommendations for Stocks- Cash and F&O traded in NSE & BSE, commodities including bullions, metals and agro-commodities traded in MCX, NCDEX.]]></string>
</resources>