<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/action_livemarket"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_livemarket" />
    <item
        android:id="@+id/action_trade"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_trade" />
    <item
        android:id="@+id/action_portfolio"
        android:icon="@drawable/ic_terms_and_conditions"
        android:title="@string/portfolio" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_profile" />
</menu>