<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/action_home"
        android:name="com.trainersstocks.CustomersApp.fragments.FavouriteFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/favourite_fragment" />


    <fragment
        android:id="@+id/action_livemarket"
        android:name="com.trainersstocks.CustomersApp.fragments.AboutswithoutloginFragment"
        android:label="@string/districtdata"
        tools:layout="@layout/fragment_aboutuswithoutlogin" />

    <fragment
        android:id="@+id/action_trade"
        android:name="com.trainersstocks.CustomersApp.fragments.AboutUsFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/action_portfolio"
        android:name="com.trainersstocks.CustomersApp.activities.NotificationActivity"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/action_profile"
        android:name="com.trainersstocks.CustomersApp.fragments.PricingFragment"
        android:label="@string/menu_cropdevelopment"
        tools:layout="@layout/pricing_fragment" />


</navigation>