<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".activities.NavigationActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/logo" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_withoutlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableLeft="@drawable/ic_home"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableTint="@color/white"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="homewithoutlogin"
                    android:text="@string/menu_home"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_15sdp"

                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableLeft="@drawable/ic_service"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableTint="@color/white"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="services"
                    android:text="@string/menu_service"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"

                    android:drawableLeft="@drawable/ic_about_us"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableTint="@color/white"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="aboutus"
                    android:text="@string/menu_aboutus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"

                    android:drawableLeft="@drawable/ic_account"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableTint="@color/white"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="account"
                    android:text="@string/menu_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"

                    android:drawableLeft="@drawable/ic_wallet"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableTint="@color/white"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="pricing"
                    android:text="@string/menu_pricing"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_15sdp"

                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableLeft="@drawable/ic_login"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableTint="@color/white"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="login"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_withlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="HomeWithLogin"
                    android:text="@string/menu_home"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_19ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="livemarket"
                    android:text="@string/menu_livemarket"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_19ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="trade"
                    android:text="@string/menu_trade"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_19ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="aboutcompany"
                    android:text="@string/menu_aboutcompany"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_19ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="profile"
                    android:text="@string/menu_profile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_19ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="portfolio"
                    android:text="@string/portfolio"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_19ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/abhaya_libre"
                    android:onClick="logout"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_19ssp"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>